feat: Implement JWT authentication with login and user profile retrieval

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,8 @@ services:
     build: .
     depends_on:
       - db
-    environment:
-      DATABASE_URL: postgres://rusticauth:password@db:5432/rusticauth
-      HOST: 0.0.0.0
-      PORT: 8080
+    env_file:
+      - .env
     ports:
       - "8080:8080"
 
