--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,3 +46,23 @@ ring = "0.16"
 base64 = "0.21"
 
 url = "2.0"
+
+tera = "1.0"              # HTML templating engine
+
+# Session management
+actix-session = { version = "0.7", features = ["cookie-session"] }
+
+# Static file serving
+actix-files = "0.6"       
+
+# HTTP authentication helpers
+actix-web-httpauth = "0.8"
+
+# For PKCE code challenges
+sha2 = "0.10"             
+
+# For encoding
+hex = "0.4"               
+
+# Secure cookie handling
+cookie = "0.17"           
